--- a/proj2/index.html
+++ b/proj2/index.html
@@ -109,11 +109,11 @@ In this project, we filled in member functions of the BezierCurve and BezierPatc
   <table style="width:100%">
     <tr align="center">
       <td>
-        <img src="../docs/P1Level0.png" align="middle" width="400px"/>
+        <img src="/P1Level0.png" align="middle" width="400px"/>
         <figcaption>Level 0</figcaption>
       </td>
       <td>
-        <img src="../docs/P1Level1.png" align="middle" width="400px"/>
+        <img src="P1Level1.png" align="middle" width="400px"/>
         <figcaption>Level 1</figcaption>
       </td>
     </tr>
