--- a/proj2/index.html
+++ b/proj2/index.html
@@ -109,7 +109,7 @@ In this project, we filled in member functions of the BezierCurve and BezierPatc
   <table style="width:100%">
     <tr align="center">
       <td>
-        <img src="../P1Level0.png" align="middle" width="400px"/>
+        <img src="P1Level0.png" align="middle" width="400px"/>
         <figcaption>Level 0</figcaption>
       </td>
       <td>
@@ -120,11 +120,11 @@ In this project, we filled in member functions of the BezierCurve and BezierPatc
     <br>
     <tr align="center">
       <td>
-        <img src="../docs/P1Level2.png" align="middle" width="400px"/>
+        <img src="P1Level2.png" align="middle" width="400px"/>
         <figcaption>Level 2</figcaption>
       </td>
       <td>
-        <img src="../docs/P1Level3.png" align="middle" width="400px"/>
+        <img src="P1Level3.png" align="middle" width="400px"/>
         <figcaption>Level 3</figcaption>
       </td>
     </tr>
@@ -135,7 +135,7 @@ In this project, we filled in member functions of the BezierCurve and BezierPatc
 
     <tr align="center">
       <td>
-        <center> <img src="../docs/P1Level4.png" align="middle" width="400px"/>
+        <center> <img src="P1Level4.png" align="middle" width="400px"/>
         <figcaption>Level 4</figcaption>
       </td>
     </tr>
@@ -150,7 +150,7 @@ In this project, we filled in member functions of the BezierCurve and BezierPatc
 <table style="width:100%">
     <tr align="center">
       <td>
-        <center> <img src="../docs/P1LastPic.png" align="middle" width="400px"/>
+        <center> <img src="P1LastPic.png" align="middle" width="400px"/>
         <figcaption>Level 0</figcaption>
       </td>
     </tr>
@@ -184,7 +184,7 @@ In this project, we filled in member functions of the BezierCurve and BezierPatc
     <table style="width:100%">
     <tr align="center">
       <td>
-        <center> <img src="../docs/P2Teapot.png" align="middle" width="400px"/>
+        <center> <img src="P2Teapot.png" align="middle" width="400px"/>
         <figcaption>Level 0</figcaption>
       </td>
     </tr>
@@ -223,11 +223,11 @@ In this project, we filled in member functions of the BezierCurve and BezierPatc
   <table style="width:100%">
     <tr align="center">
       <td>
-        <img src="../docs/P3TeapotNoShading.png" align="middle" width="400px"/>
+        <img src="P3TeapotNoShading.png" align="middle" width="400px"/>
         <figcaption>Caption: (Before) Teapot Shading without vertex normals</figcaption>
       </td>
       <td>
-        <img src="../docs/P3TeapotShading.png" align="middle" width="400px"/>
+        <img src="P3TeapotShading.png" align="middle" width="400px"/>
         <figcaption>Caption: (After) Teapot Shading with vertex normals</figcaption>
       </td>
     </tr>
@@ -277,11 +277,11 @@ In this project, we filled in member functions of the BezierCurve and BezierPatc
   <table style="width:100%">
     <tr align="center">
       <td>
-        <img src="../docs/P4BeforeFlip.png" align="middle" width="400px"/>
+        <img src="P4BeforeFlip.png" align="middle" width="400px"/>
         <figcaption>Figure 1: Before  Flip Edge </figcaption>
       </td>
       <td>
-        <img src="../docs/P4AfterFlip.png" align="middle" width="400px"/>
+        <img src="P4AfterFlip.png" align="middle" width="400px"/>
         <figcaption>Figure 2: After Flip Edge </figcaption>
       </td>
     </tr>
@@ -300,11 +300,11 @@ In this project, we filled in member functions of the BezierCurve and BezierPatc
   <table style="width:100%">
     <tr align="center">
       <td>
-        <img src="../docs/P4TeapotNoEdgeFlips.png" align="middle" width="400px"/>
+        <img src="P4TeapotNoEdgeFlips.png" align="middle" width="400px"/>
         <figcaption>Caption: (Before) Teapot Shading without Edge Flips </figcaption>
       </td>
       <td>
-        <img src="../docs/P4TeapotEdgeFlips.png" align="middle" width="400px"/>
+        <img src="P4TeapotEdgeFlips.png" align="middle" width="400px"/>
         <figcaption>Caption: (After) Teapot Shading with Edge Flips</figcaption>
       </td>
     </tr>
@@ -369,11 +369,11 @@ In this project, we filled in member functions of the BezierCurve and BezierPatc
   <table style="width:100%">
     <tr align="center">
       <td>
-        <img src="../docs/P5BeforeSplit.png" align="middle" width="400px"/>
+        <img src="P5BeforeSplit.png" align="middle" width="400px"/>
         <figcaption>Figure 1: Before Split Edge </figcaption>
       </td>
       <td>
-        <img src="../docs/P5AfterSplit.png" align="middle" width="400px"/>
+        <img src="P5AfterSplit.png" align="middle" width="400px"/>
         <figcaption>Figure 2: After Split Edge</figcaption>
       </td>
     </tr>
@@ -392,11 +392,11 @@ In this project, we filled in member functions of the BezierCurve and BezierPatc
   <table style="width:100%">
     <tr align="center">
       <td>
-        <img src="../docs/P5ExBeforeSplit.png" align="middle" width="400px"/>
+        <img src="P5ExBeforeSplit.png" align="middle" width="400px"/>
         <figcaption>Caption: (Before) Mesh before some edge splits.</figcaption>
       </td>
       <td>
-        <img src="../docs/P5ExAfterSplit.png" align="middle" width="400px"/>
+        <img src="P5ExAfterSplit.png" align="middle" width="400px"/>
         <figcaption>Caption: (After) Mesh after some edge splits.</figcaption>
       </td>
     </tr>
@@ -413,11 +413,11 @@ In this project, we filled in member functions of the BezierCurve and BezierPatc
   <table style="width:100%">
     <tr align="center">
       <td>
-        <img src="../docs/P5ExBeforeCombo.png" align="middle" width="400px"/>
+        <img src="P5ExBeforeCombo.png" align="middle" width="400px"/>
         <figcaption>Caption: Mesh before a combination of both edge splits and edge flips.</figcaption>
       </td>
       <td>
-        <img src="../docs/P5ExAfterCombo.png" align="middle" width="400px"/>
+        <img src="P5ExAfterCombo.png" align="middle" width="400px"/>
         <figcaption>Caption: Mesh after a combination of both edge splits and edge flips.</figcaption>
       </td>
     </tr>
@@ -465,11 +465,11 @@ In this project, we filled in member functions of the BezierCurve and BezierPatc
   <table style="width:100%">
     <tr align="center">
       <td>
-        <img src="../docs/P6NonsymmetricalCube.png" align="middle" width="400px"/>
+        <img src="P6NonsymmetricalCube.png" align="middle" width="400px"/>
         <figcaption>Caption: Nonsymmetrical after some loop subdivisions.</figcaption>
       </td>
       <td>
-        <img src="../docs/P6SymmetricalCube.png" align="middle" width="400px"/>
+        <img src="P6SymmetricalCube.png" align="middle" width="400px"/>
         <figcaption>Caption: Symmetrical after some loop subdivisions.</figcaption>
       </td>
     </tr>
