--- a/proj3-1/index.html
+++ b/proj3-1/index.html
@@ -122,11 +122,11 @@ We also implement the ray-sphere intersection (Figure 2), which has the followin
   <table style="width:100%">
     <tr align="center">
       <td>
-        <img src="images/part1_Fig1.png" align="middle" width="400px"/>
+        <img src="part1_Fig1.png" align="middle" width="400px"/>
         <figcaption>Figure 1: Moller Trumbore Algorithm</figcaption>
       </td>
       <td>
-        <img src="images/part1_Fig2.png" align="middle" width="400px"/>
+        <img src="part1_Fig2.png" align="middle" width="400px"/>
         <figcaption>Figure 2: Ray-Sphere Algorithm</figcaption>
       </td>
     </tr>
@@ -143,21 +143,21 @@ We also implement the ray-sphere intersection (Figure 2), which has the followin
   <table style="width:100%">
     <tr align="center">
       <td>
-        <img src="images/part1_CBspheres.png" align="middle" width="400px"/>
+        <img src="part1_CBspheres.png" align="middle" width="400px"/>
         <figcaption>CBspheres_lambertian.dae</figcaption>
       </td>
       <td>
-        <img src="images/part1_CBempty.png" align="middle" width="400px"/>
+        <img src="part1_CBempty.png" align="middle" width="400px"/>
         <figcaption>CBempty.dae</figcaption>
       </td>
     </tr>
     <tr align="center">
       <td>
-        <img src="images/part1_cow.png" align="middle" width="400px"/>
+        <img src="part1_cow.png" align="middle" width="400px"/>
         <figcaption>cow.dae</figcaption>
       </td>
       <td>
-        <img src="images/part1_CBbunny.png" align="middle" width="400px"/>
+        <img src="part1_CBbunny.png" align="middle" width="400px"/>
         <figcaption>CBbunny.dae</figcaption>
       </td>
     </tr>
@@ -191,21 +191,21 @@ We then set our median value depending on the centroidss.size(). This is to acco
   <table style="width:100%">
     <tr align="center">
       <td>
-        <img src="images/part2_beast.png" align="middle" width="400px"/>
+        <img src="part2_beast.png" align="middle" width="400px"/>
         <figcaption>beast.dae</figcaption>
       </td>
       <td>
-        <img src="images/part2_CBcoil.png" align="middle" width="400px"/>
+        <img src="part2_CBcoil.png" align="middle" width="400px"/>
         <figcaption>CBcoil.dae</figcaption>
       </td>
     </tr>
     <tr align="center">
       <td>
-        <img src="images/part2_CBlucy.png" align="middle" width="400px"/>
+        <img src="part2_CBlucy.png" align="middle" width="400px"/>
         <figcaption>CBlucy.dae</figcaption>
       </td>
       <td>
-        <img src="images/part2_maxplanck.png" align="middle" width="400px"/>
+        <img src="part2_maxplanck.png" align="middle" width="400px"/>
         <figcaption>maxplanck.dae</figcaption>
       </td>
     </tr>
@@ -255,22 +255,22 @@ For the importance light sampling function, we need to loop through the lights a
     <br>
     <tr align="center">
       <td>
-        <img src="images/part3_CBbunny.png" align="middle" width="400px"/>
+        <img src="part3_CBbunny.png" align="middle" width="400px"/>
         <figcaption>CBbunny.dae (Uniform Hemisphere)</figcaption>
       </td>
       <td>
-        <img src="images/part3_CBbunny_2.png" align="middle" width="400px"/>
+        <img src="part3_CBbunny_2.png" align="middle" width="400px"/>
         <figcaption>CBbunny.dae (Light sample)</figcaption>
       </td>
     </tr>
     <br>
     <tr align="center">
       <td>
-        <img src="images/part3_CBdragon.png" align="middle" width="400px"/>
+        <img src="part3_CBdragon.png" align="middle" width="400px"/>
         <figcaption>CBdragon.dae (Uniform Hemisphere)</figcaption>
       </td>
       <td>
-        <img src="images/part3_CBdragon_2.png" align="middle" width="400px"/>
+        <img src="part3_CBdragon_2.png" align="middle" width="400px"/>
         <figcaption>CBdragon.dae (Light sample)</figcaption>
       </td>
     </tr>
@@ -287,21 +287,21 @@ For the importance light sampling function, we need to loop through the lights a
   <table style="width:100%">
     <tr align="center">
       <td>
-        <img src="images/part3_CBbunny_l1.png" align="middle" width="200px"/>
+        <img src="part3_CBbunny_l1.png" align="middle" width="200px"/>
         <figcaption>1 Light Ray (example1.dae)</figcaption>
       </td>
       <td>
-        <img src="images/part3_CBbunny_l4.png" align="middle" width="200px"/>
+        <img src="part3_CBbunny_l4.png" align="middle" width="200px"/>
         <figcaption>4 Light Rays (example1.dae)</figcaption>
       </td>
     </tr>
     <tr align="center">
       <td>
-        <img src="images/part3_CBbunny_l16.png" align="middle" width="200px"/>
+        <img src="part3_CBbunny_l16.png" align="middle" width="200px"/>
         <figcaption>16 Light Rays (example1.dae)</figcaption>
       </td>
       <td>
-        <img src="images/part3_CBbunny_l64.png" align="middle" width="200px"/>
+        <img src="part3_CBbunny_l64.png" align="middle" width="200px"/>
         <figcaption>64 Light Rays (example1.dae)</figcaption>
       </td>
     </tr>
@@ -348,11 +348,11 @@ Therefore, we implemented at_least_one_bounce_radiance() function, which calls t
   <table style="width:100%">
     <tr align="center">
       <td>
-        <img src="images/part4_global_ex1.png" align="middle" width="400px"/>
+        <img src="part4_global_ex1.png" align="middle" width="400px"/>
         <figcaption>CBspheres_lambertian.dae</figcaption>
       </td>
       <td>
-        <img src="images/part4_global_ex2.png" align="middle" width="400px"/>
+        <img src="part4_global_ex2.png" align="middle" width="400px"/>
         <figcaption>CBbunny.dae</figcaption>
       </td>
     </tr>
@@ -368,11 +368,11 @@ Therefore, we implemented at_least_one_bounce_radiance() function, which calls t
   <table style="width:100%">
     <tr align="center">
       <td>
-        <img src="images/part4_only_direct.png" align="middle" width="400px"/>
+        <img src="part4_only_direct.png" align="middle" width="400px"/>
         <figcaption>Only direct illumination (CBspheres_lambertian.dae)</figcaption>
       </td>
       <td>
-        <img src="images/part4_only_indirect.png" align="middle" width="400px"/>
+        <img src="part4_only_indirect.png" align="middle" width="400px"/>
         <figcaption>Only indirect illumination (CBspheres_lambertian.dae)</figcaption>
       </td>
     </tr>
@@ -393,27 +393,27 @@ Therefore, we implemented at_least_one_bounce_radiance() function, which calls t
   <table style="width:100%">
     <tr align="center">
       <td>
-        <img src="images/part4_CBbunny_mxd0.png" align="middle" width="400px"/>
+        <img src="part4_CBbunny_mxd0.png" align="middle" width="400px"/>
         <figcaption>max_ray_depth = 0 (CBbunny.dae)</figcaption>
       </td>
       <td>
-        <img src="images/part4_CBbunny_mxd1.png" align="middle" width="400px"/>
+        <img src="part4_CBbunny_mxd1.png" align="middle" width="400px"/>
         <figcaption>max_ray_depth = 1 (CBbunny.dae)</figcaption>
       </td>
     </tr>
     <tr align="center">
       <td>
-        <img src="images/part4_CBbunny_mxd2.png" align="middle" width="400px"/>
+        <img src="part4_CBbunny_mxd2.png" align="middle" width="400px"/>
         <figcaption>max_ray_depth = 2 (CBbunny.dae)</figcaption>
       </td>
       <td>
-        <img src="images/part4_CBbunny_mxd3.png" align="middle" width="400px"/>
+        <img src="part4_CBbunny_mxd3.png" align="middle" width="400px"/>
         <figcaption>max_ray_depth = 3 (CBbunny.dae)</figcaption>
       </td>
     </tr>
     <tr align="center">
       <td>
-        <img src="images/part4_CBbunny_mxd100.png" align="middle" width="400px"/>
+        <img src="part4_CBbunny_mxd100.png" align="middle" width="400px"/>
         <figcaption>max_ray_depth = 100 (CBbunny.dae)</figcaption>
       </td>
     </tr>
@@ -433,37 +433,37 @@ Therefore, we implemented at_least_one_bounce_radiance() function, which calls t
   <table style="width:100%">
     <tr align="center">
       <td>
-        <img src="images/part4_sample_1.png" align="middle" width="400px"/>
+        <img src="part4_sample_1.png" align="middle" width="400px"/>
         <figcaption>1 sample per pixel (example1.dae)</figcaption>
       </td>
       <td>
-        <img src="images/part4_sample_2.png" align="middle" width="400px"/>
+        <img src="part4_sample_2.png" align="middle" width="400px"/>
         <figcaption>2 samples per pixel (example1.dae)</figcaption>
       </td>
     </tr>
     <tr align="center">
       <td>
-        <img src="images/part4_sample_4.png" align="middle" width="400px"/>
+        <img src="part4_sample_4.png" align="middle" width="400px"/>
         <figcaption>4 samples per pixel (example1.dae)</figcaption>
       </td>
       <td>
-        <img src="images/part4_sample_8.png" align="middle" width="400px"/>
+        <img src="part4_sample_8.png" align="middle" width="400px"/>
         <figcaption>8 samples per pixel (example1.dae)</figcaption>
       </td>
     </tr>
     <tr align="center">
       <td>
-        <img src="images/part4_sample_16.png" align="middle" width="400px"/>
+        <img src="part4_sample_16.png" align="middle" width="400px"/>
         <figcaption>16 samples per pixel (example1.dae)</figcaption>
       </td>
       <td>
-        <img src="images/part4_sample_64.png" align="middle" width="400px"/>
+        <img src="part4_sample_64.png" align="middle" width="400px"/>
         <figcaption>64 samples per pixel (example1.dae)</figcaption>
       </td>
     </tr>
     <tr align="center">
       <td>
-        <img src="images/part4_sample_1024.png" align="middle" width="400px"/>
+        <img src="part4_sample_1024.png" align="middle" width="400px"/>
         <figcaption>1024 samples per pixel (example1.dae)</figcaption>
       </td>
     </tr>
@@ -500,21 +500,21 @@ As we are iterating through the samples per pixel, we will calculate the pixelâ€
   <table style="width:100%">
     <tr align="center">
       <td>
-        <img src="images/part5_CBbunny.png" align="middle" width="400px"/>
+        <img src="part5_CBbunny.png" align="middle" width="400px"/>
         <figcaption>Rendered image (CBbunny.dae)</figcaption>
       </td>
       <td>
-        <img src="images/part5_CBbunny_rate.png" align="middle" width="400px"/>
+        <img src="part5_CBbunny_rate.png" align="middle" width="400px"/>
         <figcaption>Sample rate image (CBbunny.dae)</figcaption>
       </td>
     </tr>
     <tr align="center">
       <td>
-        <img src="images/part5_CBspheres.png" align="middle" width="400px"/>
+        <img src="part5_CBspheres.png" align="middle" width="400px"/>
         <figcaption>Rendered image (CBspheres.dae)</figcaption>
       </td>
       <td>
-        <img src="images/part5_CBspheres_rate.png" align="middle" width="400px"/>
+        <img src="part5_CBspheres_rate.png" align="middle" width="400px"/>
         <figcaption>Sample rate image (CBspheres.dae)</figcaption>
       </td>
     </tr>
