--- a/proj3-1/index.html
+++ b/proj3-1/index.html
@@ -44,7 +44,7 @@
 <h2 align="middle">Adam Tangonan & Jenny Mendez Mendez</h2>
 
 <!-- Add Website URL -->
-<h2 align="middle">Website URL: <a href="file:///Users/adamtangonan/p3-1-pathtracer-sp23-no-apologiesss-184/docs/index.html">p3-1-pathtracer-sp23-no-apologiesss-184</a></h2>
+<h2 align="middle">Website URL: <a href="https://cal-cs184-student.github.io/project-webpages-sp23-ATangonan/proj3-1/index.html">p3-1-pathtracer-sp23-no-apologiesss-184</a></h2>
 
 <br><br>
 
@@ -53,7 +53,7 @@
   <table style="width=100%">
       <tr>
           <td align="middle">
-          <img src="images/example_image.png" width="480px" />
+          <img src="example_image.png" width="480px" />
           <figcaption align="middle">Results Caption: my bunny is the bounciest bunny</figcaption>
       </tr>
   </table>
